taller3_grupo14/log/build_2023-04-18_12-27-41/turtle_bot_14/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/juanespadi/Documents/shalpy/taller2_grupo14/install/turtle_bot_14/lib/python3.10/site-packages/turtle_bot_14/turtle_bot_teleop.py", line 4
    from player_interfaces.msg import Trace.msg
                                           ^
SyntaxError: invalid syntax

